Dockerized, Upgraded to Java 17 & Updated dependencies. Various bugfixes.