@@ -44,6 +44,9 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>de.rwth.seilgraben.seilnet.main.SeilnetMain</mainClass>
+                                    <manifestEntries>
+                                        <Add-Opens>java.base/java.net</Add-Opens>
+                                    </manifestEntries>
                                 </transformer>
                             </transformers>
                             <filters>
@@ -139,7 +142,7 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>3.6.2</version>
+            <version>4.20.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>ch.qos.logback</groupId>
